fixed btns on mobile

--- a/styles.css
+++ b/styles.css
@@ -32,10 +32,9 @@ html {
 }
 
 nav {
-  position: fixed;
+  position: sticky;
   box-sizing: border-box;
   top: 0;
-  left: 0;
   width: 100%;
   height: 60px;
   z-index: 1000;
